--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.44.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21"
   }
 }
