--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -103,6 +104,3 @@ dist
 
 # TernJS port file
 .tern-port
-=======
-node_modules
->>>>>>> 3347526 (add more all)
